--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,26 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_native_splash: ^2.3.9
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.9
+  flutter_vector_icons: ^2.0.0
   google_fonts: ^6.1.0
   intl: any
+  pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  background_image: "assets/images/splash_bg.png"
+  image: assets/images/android_12_logo.png
+  android_12:
+    image: assets/images/android_12_logo.png
+    color: "#FFD0A6"
 
 flutter:
   uses-material-design: true
