--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,12 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
+  dotted_border: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.3.9
@@ -16,6 +19,7 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_vector_icons: ^2.0.0
   google_fonts: ^6.1.0
+  image_picker: ^1.0.5
   intl: any
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.1.0
@@ -24,6 +28,13 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/launcher_icon.png"
+  adaptive_icon_background: "#FFD0A6"
+  adaptive_icon_foreground: "assets/images/android_12_logo.png"
 
 flutter_native_splash:
   background_image: "assets/images/splash_bg.png"
