--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,8 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.1.0
@@ -50,4 +52,5 @@ flutter:
   assets:
     - assets/images/
     - assets/svg/
+    - assets/samples/
     - assets/locale/en.json
