--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.3.9
   flutter_screenutil: ^5.9.0
+  flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   flutter_vector_icons: ^2.0.0
   google_fonts: ^6.1.0
