--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   google_fonts: ^6.1.0
   image_picker: ^1.0.5
   intl: any
+  # modal_bottom_sheet: ^2.1.2
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.1.0
 
@@ -31,6 +32,9 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
+
+# dependency_overrides:
+#   modal_bottom_sheet: ^3.0.0-pre
 
 flutter_launcher_icons:
   android: true
