--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,9 @@ dependencies:
   google_fonts: ^6.1.0
   image_picker: ^1.0.5
   intl: any
-  # modal_bottom_sheet: ^2.1.2
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.1.0
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_lints: ^3.0.1
@@ -35,7 +35,6 @@ dev_dependencies:
 
 # dependency_overrides:
 #   modal_bottom_sheet: ^3.0.0-pre
-
 flutter_launcher_icons:
   android: true
   ios: true
