--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  collection: ^1.18.0
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   dotted_border: ^2.1.0
