--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pet_shouq">
+    package="com.petshouq">
    <application
         android:label="Pet Shouq"
         android:name="${applicationName}"
