update design section and complete design for android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dotted_border: ^2.1.0
   flutter:
     sdk: flutter
+  flutter_html: ^3.0.0-beta.2
   flutter_launcher_icons: ^0.13.1
   flutter_localizations:
     sdk: flutter
