--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,25 +53,24 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        archivesBaseName = "PS-${new Date().format('dd_MM_yyyy_hh_mm_ss')}-v$versionCode($versionName)"
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
-        }
-    }
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def abi = output.getFilter(OutputFile.ABI)
-            if (abi != null) { 
-                output.versionCodeOverride =
-                        defaultConfig.versionCode * 1000 + versionCodes.get(abi)
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
+                    def abi = output.getFilter(OutputFile.ABI)
+                    if (abi != null) { 
+                        output.versionCodeOverride =
+                                defaultConfig.versionCode * 1000 + versionCodes.get(abi)
+                    }
+                    def formattedDate = new Date().format('dd_MM_yyyy_hh_mm_ss')
+                    output.outputFileName = "PS ${abi} ${formattedDate}.apk"
+                }
             }
-            def formattedDate = new Date().format('dd_MM_yyyy_hh_mm_ss')
-            output.outputFileName = "PS ${abi} ${formattedDate}.apk"
         }
     }
 }
