--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ dependencies:
   animation_wrappers: ^3.0.0
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
+  connectivity_plus: ^5.0.2
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
+  dio: ^5.4.0
   dotted_border: ^2.1.0
+  firebase_auth: ^4.16.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_html: ^3.0.0-beta.2
@@ -23,10 +27,15 @@ dependencies:
   flutter_slidable: ^3.0.1
   flutter_svg: ^2.0.9
   flutter_vector_icons: ^2.0.0
+  form_field_validator: ^1.1.0
+  get: ^4.6.6
   google_fonts: ^6.1.0
   image_picker: ^1.0.7
+  internet_connection_checker: ^1.0.0+1
   intl: any
+  logger: ^2.0.2+1
   pin_code_fields: ^8.0.1
+  shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   table_calendar: ^3.0.9
 
@@ -35,8 +44,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# dependency_overrides:
-#   modal_bottom_sheet: ^3.0.0-pre
+dependency_overrides:
+  modal_bottom_sheet: ^3.0.0-pre
+
 flutter_launcher_icons:
   android: true
   ios: true
