--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   connectivity_plus: ^5.0.2
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   dio: ^5.4.0
   dotted_border: ^2.1.0
+  file_picker: ^6.1.1
   firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   flutter:
@@ -30,6 +32,7 @@ dependencies:
   form_field_validator: ^1.1.0
   get: ^4.6.6
   google_fonts: ^6.1.0
+  image_cropper: ^5.0.1
   image_picker: ^1.0.7
   internet_connection_checker: ^1.0.0+1
   intl: any
