--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,9 @@
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -58,22 +64,17 @@ android {
         versionName flutterVersionName
         archivesBaseName = "PS-${new Date().format('dd_MM_yyyy_hh_mm_ss')}-v$versionCode($versionName)"
     }
-
+    signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
-            applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-                    def abi = output.getFilter(OutputFile.ABI)
-                    if (abi != null) { 
-                        output.versionCodeOverride =
-                                defaultConfig.versionCode * 1000 + versionCodes.get(abi)
-                    }
-                    def formattedDate = new Date().format('dd_MM_yyyy_hh_mm_ss')
-                    output.outputFileName = "PS ${abi} ${formattedDate}.apk"
-                }
-            }
+            signingConfig signingConfigs.release
         }
     }
 }
