--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   intl: any
   logger: ^2.0.2+1
+  phone_numbers_parser: ^8.1.3
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
