--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   logger: ^2.0.2+1
   phone_numbers_parser: ^8.1.3
   pin_code_fields: ^8.0.1
+  quill_html_editor: ^2.2.7
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
   table_calendar: ^3.0.9
