--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,6 @@ dependencies:
   animation_wrappers: ^3.0.0
   cached_network_image: ^3.3.1
   carousel_slider: ^4.2.1
-  connectivity_plus: ^5.0.2
   country_code_picker: ^3.0.0
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
@@ -22,8 +21,6 @@ dependencies:
     sdk: flutter
   flutter_html: ^3.0.0-beta.2
   flutter_launcher_icons: ^0.13.1
-  flutter_localizations:
-    sdk: flutter
   flutter_native_splash: ^2.3.9
   flutter_screenutil: ^5.9.0
   flutter_slidable: ^3.0.1
@@ -35,7 +32,7 @@ dependencies:
   image_cropper: ^5.0.1
   image_picker: ^1.0.7
   internet_connection_checker: ^1.0.0+1
-  intl: any
+  intl: ^0.18.1
   logger: ^2.0.2+1
   phone_numbers_parser: ^8.1.3
   pin_code_fields: ^8.0.1
@@ -68,8 +65,6 @@ flutter_native_splash:
 
 flutter:
   uses-material-design: true
-  generate: true
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/svg/
